# OpenCL-Layers

./: CMakeLists.txt
.github/workflows/: linux.yml  macos.yml  presubmit.yml  windows.yml
cmake/: FindRapidXml.cmake
object-lifetime/: CMakeLists.txt  object_lifetime.cpp
object-lifetime/test/: CMakeLists.txt  object_lifetime_test.cpp  sub_device.cpp
param-verification/: CMakeLists.txt  bitfield.awk  cl-avl.xml  enums.awk  func.h  generate.sh  list_violation.cpp  lists.awk  object_is_valid.cpp  object_is_valid1.cpp  param_verification.cpp  param_verification.hpp  parse.awk  parser.cpp  struct_violation.cpp
program-cache/lib/test/: test_preprocessor.cpp
utils/: utils.hpp
